Reorganize CircuitSim project to support JDK 14 with a new Gradle build file setup by arcostasi in #66: - Move all source code to src/main/java - Move all images to src/main/resources/images - Move all fonts to src/main/resources/fonts - Move main method to CircuitSimRunner since the main class cannot extend Application to be able to run the jar: https://github.com/javafxports/openjdk-jfx/issues/236